@@ -30,6 +30,7 @@ too-many-belts=[img=item.fast-transport-belt] Too Many Belts
 remind-me-later=[img=virtual-signal.signal-alarm] Remind Me Later
 look-at-my-score=[img=hex-rank] Look at My Score
 exploration=[img=virtual-signal.signal-map-marker] Exploration
+grabbing-the-milk-nauvis=[img=space-location.nauvis] Grabbing The Milk
 cracking-the-vault=[img=virtual-signal.signal-lock] Cracking the Vault
 lockbreaker=[img=virtual-signal.signal-lock] Lockbreaker
 automated-clearing=[img=virtual-signal.signal-lock] Automated Clearing
@@ -65,11 +66,13 @@ stepping-on-ants=[img=virtual-signal.signal-damage] Stepping on Ants
 stepping-on-beetles=[img=virtual-signal.signal-damage] Stepping on Beetles
 cant-step-on-that=[img=virtual-signal.signal-damage] Can't Step on That
 this-is-fine=[img=virtual-signal.shape-cross] This is Fine!
+grabbing-the-milk-vulcanus=[img=space-location.vulcanus] Grabbing The Milk
 copper-flavored-lava=[img=fluid.lava] Copper Flavored Lava
 vulcanus-101=[img=item.electric-mining-drill] Vulcanus 101
 metallurgic-dungeon=[img=virtual-signal.signal-fire] Metallurgic Dungeon
 visit-fulgora=[planet=fulgora] Visit Fulgora
 my-hair-feels-funny=[img=virtual-signal.shape-cross] My Hair Feels Funny
+grabbing-the-milk-fulgora=[img=space-location.fulgora] Grabbing The Milk
 electrocution=[img=virtual-signal.signal-skull] Electrocution
 tesla-freak=[img=virtual-signal.signal-lightning] Tesla Freak
 you-are-the-destroyer=[img=virtual-signal.signal-weapon] YOU are the Destroyer
@@ -77,12 +80,14 @@ lazy-bastard=[img=item.roboport] Lazy Bastard
 electromagnetic-dungeon=[img=virtual-signal.signal-lightning] Electromagnetic Dungeon
 visit-gleba=[planet=gleba] Visit Gleba
 yummy-co=[img=virtual-signal.shape-cross] Yummy Co.
+grabbing-the-milk-gleba=[img=space-location.gleba] Grabbing The Milk
 five-legs-werent-enough=[img=virtual-signal.signal-damage] Five Legs Weren't Enough
 farm-fresh-eggs=[img=recipe.pentapod-egg] Farm Fresh Eggs
 farm-fresh-produce=[img=item.yumako] Farm Fresh Produce
 industrial-garden=[img=item.biochamber] Industrial Garden
 biochemical-dungeon=[img=virtual-signal.signal-liquid] Biochemical Dungeon
 visit-aquilo=[planet=aquilo] Visit Aquilo
+grabbing-the-milk-aquilo=[img=space-location.aquilo] Grabbing The Milk
 i-am-the-demolisher=[img=virtual-signal.signal-weapon] I AM the Demolisher!
 collateral-damage=[img=item.railgun-ammo] Collateral Damage
 pond-filler=[img=tile.water] Pond Filler
@@ -103,6 +108,7 @@ too-many-belts=Not enough rails!
 remind-me-later=You can favorite a trade for it to show up at the top of your trade overview!
 look-at-my-score=Get the highest hex rank you can! Hex rank measures your overall progress through the game and Hextorio.
 exploration=Claim more hexes. Take what is rightfully yours!
+grabbing-the-milk-nauvis=You're gonna be gone for a long time.
 cracking-the-vault=Go find a strongbox and break it open! Ten times!
 lockbreaker=You'll need to find more strongboxes to do this. Their levels scale infinitely, but you get soft capped eventually.
 automated-clearing=While you're building factories on other planets, your turrets chip away at the loot boxes!
@@ -138,11 +144,13 @@ stepping-on-ants=It's just a small one, it can't be that hard!
 stepping-on-beetles=Show them who owns this planet!
 cant-step-on-that=They're not the bad guys in this story.
 this-is-fine=It was all part of the plan, actually.
+grabbing-the-milk-vulcanus=You're gonna be gone for a long time.
 copper-flavored-lava=It's not any hotter than the tea at that one cuisine.
 vulcanus-101=Every planet's factory starts with mining the raw resources!
 metallurgic-dungeon=The dungeons on this planet boast defenses of extreme heat.
 visit-fulgora=It has oil!
 my-hair-feels-funny=It kind of feels good. Is this why others come here and never leave?
+grabbing-the-milk-fulgora=You're gonna be gone for a long time.
 electrocution=Lightning safety tips are only written by people who've never been struck. The real experts aren't available for consultation.
 tesla-freak=The number is bigger because there are more of the smaller numbers. It's a better strat because it's a bigger number.
 you-are-the-destroyer=Be one with the zap.
@@ -150,12 +158,14 @@ lazy-bastard=Automating crafting was the easy part.
 electromagnetic-dungeon=The dungeons on this planet boast defenses of extreme voltage.
 visit-gleba=What a beautiful planet!
 yummy-co=Your yumako fruit trading company is coming along well here!
+grabbing-the-milk-gleba=You're gonna be gone for a long time.
 five-legs-werent-enough=For only three more legs, they could've been spiders, and spiders are really cool.
 farm-fresh-eggs=Fresh eggs here!
 farm-fresh-produce=Fresh produce here!
 industrial-garden=Take some time to smell the poison. Or the flowers if you prefer.
 biochemical-dungeon=The dungeons on this planet boast defenses of extremely toxic matter.
 visit-aquilo=An icy marble glimmering in space... dawg, yo mama so fat she's the reason this planet's icebergs are so far apart.
+grabbing-the-milk-aquilo=You're gonna be gone for a long time.
 i-am-the-demolisher=Be one with the 150kg rain drops... I mean railgun shells.
 collateral-damage=Hopefully you don't have to find out the hard way that your own railguns can kill you.
 pond-filler=You only brought enough to fill this pond. This little pond.
@@ -195,6 +205,7 @@ loot-dungeons-off-planet=Loot Dungeons Off Planet
 hex-cores-in-mode=Hex Cores in Mode
 cover-ores-on=Cover Ores On
 give-hexlight-color=Give Hexlight Color
+claim-farthest-hex-on=Claim Farthest Hex
 visit-planet=Visit Planet
 ping-trade=Ping Trade
 create-trade-map-tag=Create Map Tag
@@ -230,6 +241,7 @@ loot-dungeons-off-planet=Loot [font=__3__][color=__2__]__1__[.color][.font] __pl
 hex-cores-in-mode=Switch [font=__4__][color=__3__]__1__[.color][.font] __plural_for_parameter__1__{1=hex core|rest=hex cores}__ to [font=__4__][color=__3__]__2__[.color][.font] mode.
 cover-ores-on=Cover [font=__4__][color=__3__]__1__[.color][.font] ore entities on [planet=__2__].
 give-hexlight-color=Pass the signal [virtual-signal=signal-__2__] with a value of [font=__5__][color=__4__]__3__[.color][.font] to a [img=entity.hex-core] hex core.
+claim-farthest-hex-on=Claim the most distant hex from spawn on [planet=__2__].
 visit-planet=Visit [planet=__1__].
 reach-hex-rank=Reach a hex rank of __1__.
 ping-trade=Ping a trade in chat.
